# elberAI

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: dependency-review.yml  tests.yml
Elber/: .env.template  README.md  app.json  babel.config.js  index.js  jest.config.js  jest.setup.js  package-lock.json  package.json
Elber/__mocks__/@react-native-community/: geolocation.js
Elber/ios/: Podfile
backEnd/: docker-compose.yml
backEnd/ai-services/: .env.template  Dockerfile  README.md  package-lock.json  package.json
backEnd/api-gateway/: .env.template  Dockerfile  README.md  package-lock.json  package.json
backEnd/auth-services/: .env.template  Dockerfile  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
backEnd/news-services/: .gitignore  Dockerfile  Makefile  README.md  app.py  requirements.txt  start_server.sh
backEnd/news_services/: .env.template  .gitignore  Dockerfile  README.md  pyproject.toml  run_daily_news.sh
backEnd/news_services/knowledge/: user_preference.txt
backEnd/news_services/src/news_services/: crew.py  main.py  models.py
backEnd/news_services/src/news_services/config/: agents.yaml  tasks.yaml
backEnd/news_services/src/news_services/tools/: email_tool.py
backEnd/notification-services/: .env.template  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
elberApp/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
elberApp/__tests__/: App.test.tsx
elberApp/android/: settings.gradle
elberApp/ios/: Podfile
web/: README.md  package-lock.json  package.json
(+338 files in other folders)
