[project]
name = "news_services"
version = "0.1.0"
description = "news-services using crewAI"
authors = [{ name = "Martin Nava", email = "martin@namart.tech" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1",
    "requests>=2.25.0",
    "PyJWT>=2.0.0"
]

[project.scripts]
news_services = "news_services.main:run"
run_crew = "news_services.main:run"
train = "news_services.main:train"
replay = "news_services.main:replay"
test = "news_services.main:test"
run_with_trigger = "news_services.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/news_services"]

[tool.crewai]
type = "crew"
